[package]
name = "user_input05"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
clipboard-win = "4.5.0"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
serde = "1.0.188"
serde_json = "1.0.105"
